<resources>
    <string name="app_name">Comlink</string>

    <string name="search_string_label">Search Text</string>
    <string name="search_string_hint">Enter Search Text, I.e. \"Comlink\"</string>
    <string name="search_title_label">Title</string>
    <string name="search_lore_label">Lore</string>
    <string name="search_gametext_label">Gametext</string>
    <string name="search_side_label">Side</string>
    <string name="search_set_label">Set</string>
    <string name="search_button_text">Search</string>
    <string name="reset_button_text">Reset</string>
    <string name="search_no_results_toast">No results matching the given search parameters.</string>
    <string name="search_options_label">Filters</string>
    <string name="flip_card">Flip</string>
    <string name="rotate_card">Rotate</string>

    <string name="search_any_set">Any Set</string>
    <string name="search_any_side">Any Side</string>
    <string name="search_any_card_type">Any Type</string>
    <string name="search_any_card_subtype">Any Subtype</string>
    <string name="search_any_format">Any Format</string>

</resources>
