<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight"
    android:fillViewport="true">

    <ProgressBar
        android:id="@+id/search_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/search_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/search_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:text="@string/search_string_label"
                android:textColor="@color/textDarkPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordered_background"
                android:padding="@dimen/default_padding">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/search_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_string_hint"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="text"
                    android:textColor="@color/textDarkPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/search_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_edittext">

                    <CheckBox
                        android:id="@+id/search_title_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search_title_label"
                        android:textColor="@color/textDarkPrimary" />

                    <CheckBox
                        android:id="@+id/search_gametext_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search_gametext_label"
                        android:textColor="@color/textDarkPrimary" />

                    <CheckBox
                        android:id="@+id/search_lore_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/search_lore_label"
                        android:textColor="@color/textDarkPrimary" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/default_padding" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/textDarkSecondary"
                android:text="@string/search_button_text"
                android:textColor="@color/textLightSecondary" />

        </LinearLayout>

        <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:padding="@dimen/default_padding">-->

        <!--        <androidx.appcompat.widget.AppCompatTextView-->
        <!--            android:id="@+id/search_label"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/search_string_label"-->
        <!--            android:textColor="@color/textDarkPrimary"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <!--        <androidx.appcompat.widget.AppCompatEditText-->
        <!--            android:id="@+id/search_edittext"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textColor="@color/textDarkPrimary"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/search_label" />-->

        <!--        <LinearLayout-->
        <!--            android:id="@+id/search_container"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal"-->
        <!--            android:paddingBottom="20dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/search_edittext">-->

        <!--            <CheckBox-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/search_title_label"-->
        <!--                android:textColor="@color/textDarkPrimary" />-->

        <!--            <CheckBox-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/search_gametext_label"-->
        <!--                android:textColor="@color/textDarkPrimary" />-->

        <!--            <CheckBox-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/search_lore_label"-->
        <!--                android:textColor="@color/textDarkPrimary" />-->

        <!--        </LinearLayout>-->

        <!--        <androidx.appcompat.widget.AppCompatTextView-->
        <!--            android:id="@+id/side_spinner_label"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/search_side_label"-->
        <!--            android:textColor="@color/textDarkPrimary"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/set_spinner"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/search_container" />-->

        <!--        <androidx.appcompat.widget.AppCompatTextView-->
        <!--            android:id="@+id/set_spinner_label"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/search_set_label"-->
        <!--            android:textColor="@color/textDarkPrimary"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@id/side_spinner"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/search_container" />-->

        <!--        <androidx.appcompat.widget.AppCompatSpinner-->
        <!--            android:id="@+id/side_spinner"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="20dp"-->
        <!--            android:layout_marginEnd="@dimen/default_padding"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/set_spinner"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/side_spinner_label" />-->

        <!--        <androidx.appcompat.widget.AppCompatSpinner-->
        <!--            android:id="@+id/set_spinner"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="20dp"-->
        <!--            android:layout_marginStart="@dimen/default_padding"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@id/side_spinner"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/set_spinner_label" />-->

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/search_button"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@color/textDarkSecondary"-->
        <!--            android:text="@string/search_button_text"-->
        <!--            android:textColor="@color/textLightSecondary"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent" />-->

        <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    </ScrollView>
</FrameLayout>

